Update stationarybuttons CSS file to work around recently introduced bug in Chrome, Thanks to xmccx. Tested on Safari, Firefox, and Chrome on my OSX system
git-svn-id: http://svn.code.sf.net/p/kolmafia/code@19563 b29ace70-8910-0410-8dcc-aa2fc6433167

--- a/src/relay/stationarybuttons.2.css
+++ b/src/relay/stationarybuttons.2.css
@@ -19,5 +19,7 @@
 	overflow: auto;
 }
 #btnwrap{
-    width: 100%;
+    // width: 100%;
+    display: flex; 
+    flex-wrap: wrap; 
 }
